--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "geist": "^1.0.0",
+    "gray-matter": "^4.0.3",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
