--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-markdown": "^9.0.0"
+    "react-markdown": "^9.0.0",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "eslint": "^8",
