--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^2.0.4",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -22,7 +23,7 @@
     "geist": "^1.0.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.292.0",
-    "mongodb": "^6.2.0",
+    "mongodb": "^6.3.0",
     "next": "14.0.1",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
