--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "clsx": "^2.0.0",
     "geist": "^1.0.0",
     "gray-matter": "^4.0.3",
-    "lucide-react": "^0.292.0",
+    "lucide-react": "^0.316.0",
     "mongodb": "^6.3.0",
-    "next": "14.0.3",
+    "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "react": "^18",
@@ -44,7 +44,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.1",
+    "eslint-config-next": "^14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
