--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "emoji-picker-react": "^4.11.1",
     "geist": "^1.0.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.316.0",
