--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ next-env.d.ts
 # custom
 actions.js
 we-forgot-how-to-learn.md
+forgetting-that-words-are-powerful.md
+forgetting-that-words-are-powerful.webp
